Fixed overflow on header in buy orders on Exchange, and reduced padding in info col

--- a/app/styles/list.less
+++ b/app/styles/list.less
@@ -68,7 +68,7 @@
     &.info-col {
       width: 10px;
       min-width: 14px;
-      padding-left: 10px;
+      padding-left: 2px;
       padding-top: 6px;
       .info {
         width: 14px;
