--- a/app/styles/trader/trader.less
+++ b/app/styles/trader/trader.less
@@ -98,7 +98,9 @@ trader {
      font-weight: bold;
      display:inline-block;
    }
-
+   md-list-item.header{
+     overflow: hidden;
+   }
    .info-col {
      flex-grow: 0 !important;
    }
